--- a/CSC299 - Appendix.ipynb
+++ b/CSC299 - Appendix.ipynb
@@ -2,101 +2,55 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de6853ee",
+   "id": "b9147658",
    "metadata": {},
    "source": [
-    "# Appendix 1A: Unitary matrices\n",
+    "This section contains some additional details about the proof for the claim about repeated applications of the amplitude amplification function that were stated in Report 1. Since the details of the proof are of lesser importance for our purposes as compared to the implementation of the complete amplitude amplification procedure and to prevent Report 1 from being excessively long, these details are now provided in this Appendix section.\n",
     "\n",
-    "## Unitary operators\n",
-    "\n",
-    "### Definition: Unitary operators\n",
-    "Recall that each operator on a complex Hilbert space, $A$, has a corresponding adjoint operator, $A^\\dagger$. We say that an operator, $U$, is unitary if we have that $AA^\\dagger = I = A^\\dagger A$, where $I$ denotes the identity operator of appropriate dimension.\n",
-    "\n",
-    "### Definition: Isometries\n",
-    "An operator, $S$, is said to be an isometry if it preserves \n",
-    "\n",
-    "Note: Unitary is not the same as isometry\n",
-    "\n",
-    "### Proposition: All unitary matrices are isometries, but not all isometries are unitary.\n",
-    "TODO\n",
-    "\n",
-    "## Pauli operators\n",
-    "\n",
-    "### Definition: Pauli operators\n",
-    "TODO\n",
-    "\n",
-    "### Proposition: Pauli matrices form a basis\n",
-    "TODO\n",
-    "\n",
-    "### Tequila example: Decomposing arbitrary operators into Pauli strings\n",
-    "TODO"
+    "The theorems presented here are Lemma 3.7 and Lemma 3.6 respectively in the paper by Berry, Childs, Cleve, Kothari, Somma (2014)."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2a6e9de6",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "265d2813",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1672da96",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "695d03cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9478b96d",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "66283ee6",
    "metadata": {},
    "source": [
-    "# Appendix 1B: Amplitude amplification\n",
+    "# Amplitude amplification\n",
     "\n",
-    "## Algorithm\n",
+    "## Theorem: 2D-Subspace Theorem\n",
     "\n",
-    "### Definition: Oblivious amplitude amplification operator (obv_amp_amp)\n",
+    "\n",
+    "\n",
+    "## Theorem: Repeated applications of obv_amp_amp\n",
+    "Let $W$ be a unitary operator which acts on $\\mu + n$ qubits and let $H$ be any arbitrary operator which acts on $n$ qubits, respectively, and let $\\theta \\in (0, \\pi/2)$. Suppose that for any $n$-qubit state $\\left| \\psi \\right\\rangle$,\n",
+    "\\begin{align*}\n",
+    "    W \\left|0^\\mu \\right\\rangle \\left| \\psi \\right\\rangle &= \\sin(\\theta) \\left| 0^\\mu \\right\\rangle H \\left| \\psi \\right\\rangle  + \\cos(\\theta) \\left| \\Phi^\\perp \\right\\rangle\n",
+    "\\end{align*}\n",
+    "where $\\left| \\Phi^\\perp \\right\\rangle$ is an $(\\mu + n)$-qubit state that depends on $\\left| \\psi \\right\\rangle$ and satisfies $P_0 \\left| \\Phi^\\perp \\right\\rangle = 0$, where $P_0 = \\left| 0^\\mu \\right\\rangle \\left\\langle 0^\\mu \\right| \\otimes I$. Let $R = 2P_0  − I$ and $S = - W R W^\\dagger R$. Then for any $k\\in \\mathbb{Z}$,\n",
+    "\\begin{align*}\n",
+    "    S^k W \\left|0^\\mu \\right\\rangle \\left| \\psi \\right\\rangle &= \\sin ( (2k + 1) \\theta ) \\left|0^\\mu \\right\\rangle \\left| \\psi \\right\\rangle + \\cos ( (2k + 1) \\theta ) \\left| \\Phi^\\perp \\right\\rangle\n",
+    "\\end{align*}\n",
+    "\n",
+    "### Proof\n",
+    "\n",
     "TODO\n",
     "\n",
-    "### Lemma: 2D-Subspace\n",
-    "TODO\n",
+    "Reference used: \n",
     "\n",
-    "### Lemma: Repeated applications of obv_amp_amp\n",
-    "TODO\n",
+    "- [Simulating Hamiltonian Dynamics with a truncated Taylor Series (BCCKS)](https://arxiv.org/abs/1412.4687)\n",
     "\n",
-    "## Analysis\n",
-    "\n",
-    "### Lemma: Complexity\n",
-    "TODO"
+    "- [Exponential improvement in precision for simulating sparse Hamiltonians (BCCKS)](https://arxiv.org/abs/1312.1414)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30808451",
+   "cell_type": "markdown",
+   "id": "bd135d56",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# References\n",
+    "\n",
+    "TODO"
+   ]
   }
  ],
  "metadata": {
